# clap-value-enum-catchall

./: Cargo.toml  README.md
examples/: catch-uuid.rs
src/: lib.rs
tests/: catch-all.rs
